Update java basic